--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@next/mdx": "^9.3.0",
+    "@types/react-select": "^4.0.13",
     "next": "^10.0.7",
     "next-pwa": "^2.3.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-json-view": "^1.21.1"
+    "react-json-view": "^1.21.1",
+    "react-select": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
