--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "@next/mdx": "^9.3.0",
+    "@types/mongodb": "^3.6.9",
+    "@types/node": "^14.14.33",
     "@types/react-select": "^4.0.13",
+    "mongodb": "^3.6.4",
     "next": "^10.0.7",
     "next-pwa": "^2.3.0",
     "react": "^16.13.0",
@@ -24,7 +27,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.1",
-    "@types/node": "^13.9.0",
     "@types/react": "^16.9.23",
     "typescript": "^3.8.3",
     "webpack": "^5.24.1"
