--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@next/mdx": "^9.3.0",
+    "@types/js-cookie": "^2.2.6",
     "@types/mongodb": "^3.6.9",
     "@types/node": "^14.14.33",
     "@types/react-select": "^4.0.13",
+    "js-cookie": "^2.2.1",
     "mongodb": "^3.6.4",
     "next": "^10.0.7",
     "next-pwa": "^2.3.0",
