create data select controls

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "buildnv": "node src/upversion.js && next build",
     "start": "next start",
     "deploy": "next build && next export"
   },
